--- a/force-app/main/default/classes/vy_Exception.cls
+++ b/force-app/main/default/classes/vy_Exception.cls
@@ -1,3 +1,12 @@
 public class vy_Exception extends Exception {
     
+    public vy_Exception ( vy_ExceptionParent parent, Exception e ) {
+        // handle
+    }
+
+    public vy_Exception ( vy_ExceptionParent parent, string msg ) {
+        // handle
+    }
+
+    
 }
