--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -1,21 +1,23 @@
 // Interface to Formation information
 
-global class vy_Formation {
+public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
 
-    global String name;
-    global String soqlStatement;
-    global String flowInterviewName;
-    global Boolean isValid;
-    global Integer batchSize;
-    global integer recordsProcessed;
-    global Boolean bulkFlowEnabled;
-    global String flowInputVariableName;
+    public String name;
+    public String soqlStatement;
+    public String flowInterviewName;
+    public Boolean isValid;
+    public Integer batchSize;
+    public integer recordsProcessed;
+    public String flowInputVariableName;
 
     private string notificationEmailAddresses;
     private integer errorCount;
     private string errorMessage;
 
-    global vy_Formation () {
+    private vy_Coordinator coordinator;
+    private vy_ScheduleItem scheduleItem;
+
+    public vy_Formation ( vy_Coordinator coordinator ) {
         this.soqlStatement = '';
         this.flowInterviewName = '';
         this.isValid = false;
@@ -23,141 +25,134 @@ global class vy_Formation {
         this.errorCount = 0;
         this.errorMessage = '';
         this.recordsProcessed = 0;
-        //this.flowInputVariableName = '';
-        //this.bulkFlowEnabled = false;
+        this.flowInputVariableName = '';
         this.notificationEmailAddresses = '';
+        this.coordinator = coordinator;
     }
 
-    global boolean load ( String formationName ) {
-        // read from CMT
-        Set < string > fields = new Set < string > ();
-        fields.add ( 'DeveloperName' );
-        fields.add ( 'Flow_Interview_Name__c' );
-        fields.add ( 'Active__c' );
-        fields.add ( 'Batch_Size__c' );
-        fields.add ( 'Soql_Statement__c' );
-        fields.add ( 'Notification_Email_Addresses__c' );
-//        fields.add ( 'Flow_Input_Variable_Name__c' );
+    public void load ( Id recordId ) {
 
-        // build soql statement
-        string soql = 'SELECT ';
-        for ( string fieldName : fields ) {
-            soql = soql + fieldName + ',';
-        }
-        soql = soql.left ( soql.length () - 1 );
-        soql = soql + ' FROM Vyuha_Formation__c WHERE Active__c = TRUE AND DeveloperName = \'' + formationName + '\'';
+        try {
+            // read from CMT
+            List < string > fields = new List < string > ();
+            fields.add ( 'Id' );
+            fields.add ( 'Flow_Interview_Name__c' );
+            fields.add ( 'Active__c' );
+            fields.add ( 'Batch_Size__c' );
+            fields.add ( 'Soql_Statement__c' );
+            fields.add ( 'Notification_Email_Addresses__c' );
+            fields.add ( 'Flow_Input_Variable_Name__c' );
 
-        if ( Test.isRunningTest() ) {
-            // add the Test clause here
-            soql = soql + ' AND Is_Test__c = TRUE';
-        } else {
-            soql = soql + ' AND Is_Test__c = FALSE';
-        }
+            // build soql statement
+            string soql = 'SELECT ' + String.join ( fields, ',' );
+            soql += ' FROM Vyuha_Formation__c WHERE Active__c = TRUE AND Id = \'' + recordId + '\'';
 
-        List < sObject > formationRecords = Database.Query ( soql );
+            List < sObject > formationRecords = Database.Query ( soql );
 
-        if ( formationRecords.size () == 0 ) {
-            return false;
+            if ( formationRecords.size () == 0 ) {
+                throw new vy_Exception ( this, 'Formation with ID ' + recordId + ' not found' );
+            } 
+
+            // load values
+            this.name = (string) formationRecords[0].get ( 'Id' );
+            this.flowInterviewName = (string) formationRecords[0].get ( 'Flow_Interview_Name__c' );
+            this.batchSize = Integer.valueOf ( (decimal) formationRecords[0].get ( 'Batch_Size__c' ));
+            this.soqlStatement = (string) formationRecords[0].get ( 'Soql_Statement__c' );
+            this.notificationEmailAddresses = (string) formationRecords[0].get ( 'Notification_Email__c' );
+            this.flowInputVariableName = (string) formationRecords[0].get ( 'Flow_Input_Variable_Name__c' );
+
+            // TODO validate the formation
+            this.isValid = true;
+        } catch ( Exception e ) {
+            throw new vy_Exception ( this, e );
         } 
+        
+    }
 
-        // load values
-        this.name = (string) formationRecords[0].get ( 'DeveloperName' );
-        this.flowInterviewName = (string) formationRecords[0].get ( 'Flow_Interview_Name__c' );
-        this.batchSize = Integer.valueOf ( (decimal) formationRecords[0].get ( 'Batch_Size__c' ));
-        this.soqlStatement = (string) formationRecords[0].get ( 'Soql_Statement__c' );
-        this.notificationEmailAddresses = (string) formationRecords[0].get ( 'Notification_Email__c' );
-        //this.flowInputVariableName = (string) formationRecords[0].get ( 'Flow_Input_Variable_Name__c' );
-
-        // TODO validate the formation
-        this.isValid = true;
-
+    public boolean isRunning () {
         return true;
     }
 
-    // launches a formation as a batch job
-    global string launch () {
-        if ( this.isValid ) {
-            vy_Processor processor = new vy_Processor ( this, new vy_Coordinator ());
-            return Database.executeBatch ( processor, this.batchSize );
-        } else {
-            // formation is not valid - do nothing
-            return null;
-        }
-    }
-
-    global string getName () {
+    public string getName () {
         return this.name;
     }
 
-    global string getSoqlStatement () {
+    public string getSoqlStatement () {
         return this.soqlStatement;
     }
 
-    global boolean isValid () {
+    public boolean isValid () {
         return this.isValid;
     }
 
-    global integer getBatchSize () {
+    public integer getBatchSize () {
         return this.batchSize;
     }
 
-    global Boolean executeFlow ( List < sObject > recordsToProcess ) {
-        // iterate through records to process, passing into a Flow Interview
-        for ( sObject sObj : recordsToProcess ) {
-            String inputId = (String) sObj.get ('id');
-            // convert the IDs into a Map structure for input into flow
-            Map < String, String > inputMap = new Map < String, String > ();
-            inputMap.put ( 'inputID', inputId );
-            vy_Coordinator.debugOutput ( 'vy_Formation::executeFlow', 'inputMap', inputMap );
-            vy_Coordinator.debugOutput ( 'vy_Formation::executeFlow', 'Flow', this.flowInterviewName );
-
-            // TODO: error handling 
-            // invoke the associated Flow
-            Flow.Interview jobFlow = Flow.Interview.CreateInterview ( this.flowInterviewName, inputMap );
-            jobFlow.start ();
-            this.recordsProcessed++;
-        }
-
-        return true; // return false if execute fails
+    public string getNotificationEmailAddresses () {
+        return this.notificationEmailAddresses;
     }
 
-    global void addError ( String stage, String message ) {
+    public void execute ( List < sObject > dataList ) {
+        // iterate through records to process, passing into a Flow Interview
+        try {
+            for ( sObject sObj : dataList ) {
+                String inputId = (String) sObj.get ( this.flowInputVariableName );
+                // convert the IDs into a Map structure for input into flow
+                Map < String, String > inputMap = new Map < String, String > ();
+                inputMap.put ( 'inputID', inputId );
+                vy_Coordinator.debugOutput ( 'vy_Formation::executeFlow', 'inputMap', inputMap );
+                vy_Coordinator.debugOutput ( 'vy_Formation::executeFlow', 'Flow', this.flowInterviewName );
+                // invoke the associated Flow
+                Flow.Interview jobFlow = Flow.Interview.CreateInterview ( this.flowInterviewName, inputMap );
+                jobFlow.start ();
+                this.recordsProcessed++;
+            }
+        } catch ( Exception e ) {
+            // handle
+            throw new vy_Exception ( this, e );
+        }
+    }
+
+    public void addError ( String stage, String message ) {
         this.errorCount++;
         this.errorMessage = this.errorMessage + '\n' + '(Formation: ' + this.name + ') Error #' + String.valueOf ( this.errorCount ) + ' ------\n' +'Stage: ' + stage + '\n' + 'Message: ' + message + '\n';
     }
 
-    global void complete () {
+    public void start () {
+        try {
+            ID batchJobId = Database.executeBatch ( new vy_Processor ( this ), this.batchSize );
+        } catch ( Exception e ) {
+            throw new vy_Exception ( this, e );
+        }
+    }
+
+    public void start ( vy_ScheduleItem scheduleItem ) {
+        this.scheduleItem = scheduleItem;
+        this.start ();
+    }
+
+    public void complete () {
         // send email notifications
-        sendNotificationEmail ();
+        coordinator.sendNotificationEmail ( this );
 
     }
 
-    private void sendNotificationEmail ( ) {
+    // logging
+    public void writeLog ( vy_Processor processor ) {
+        // implement
+    }
 
-        string[] toaddress;
-        if ( this.notificationEmailAddresses != null ) {
-            toaddress = ( this.notificationEmailAddresses ).split('[;,\n)]');
-        } else {
-            return;
-        }
+    public void errorLog ( string errorClass, string errorMessage ) {
+        // implement
+    }
 
-        string dateString = System.now().format('EEEE, MMMM d, yyyy hh:mm a');
+    // exception
 
-        string body = 'Job Complete for ' + this.name + ' - ' + dateString + '\n\n';
-        body += 'Total Records Processed ' + this.recordsProcessed + '\n';
-        body += 'Total Errors: ' + this.errorCount + '\n';
-        if ( this.errorCount > 0 ) {
-            body += '==== Errors ===== \n' + this.errorMessage;
-        }
+    public string className () {
+        return 'vy_Formation';
+    }
 
-        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-        mail.setToAddresses(toaddress);
-        mail.setsubject( 'Salesforce Automated Formation Job Processing Report ' + dateString );
-        mail.setPlainTextBody(body);
-        
-        // send the email.
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
-
-		}
+   
 
 }
